sql-analyzer-plugin/antlr/.antlr/postgreSqlGrammarParser.java
// Generated from /home/feriano/Documentos/Felipe/F/UNAL/Lenguajes/Repos/SQL-Analyzer/sql-analyzer-plugin/antlr/postgreSqlGrammar.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class postgreSqlGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ID=1, VARCHAR=2, INT=3, NUMERIC=4, TEXT=5, DATE=6, TIMESTAMP=7, BOOL=8, 
		SERIAL=9, BIGSERIAL=10, UUID=11, JSON=12, JSONB=13, BYTEA=14, FLOAT=15, 
		REAL=16, DOUBLE=17, DECIMAL=18, MONEY=19, SMALLINT=20, BIGINT=21, CHAR=22, 
		BIT=23, INTERVAL=24, SELECT=25, WITH=26, FROM=27, WHERE=28, GROUP=29, 
		BY=30, HAVING=31, ORDER=32, ASC=33, DESC=34, AND=35, OR=36, NOT=37, AS=38, 
		ON=39, IS=40, NULL=41, LIKE=42, BETWEEN=43, NATURAL=44, CASE=45, WHEN=46, 
		THEN=47, ELSE=48, END=49, CREATE=50, FUNCTION=51, RETURNS=52, INNER=53, 
		LEFT=54, RIGHT=55, FULL=56, JOIN=57, COUNT=58, SUM=59, AVG=60, MIN=61, 
		MAX=62, ARRAY_AGG=63, STRING_AGG=64, BOOL_AND=65, BOOL_OR=66, VAR_POP=67, 
		VAR_SAMP=68, STDDEV_POP=69, STDDEV_SAMP=70, OFFSET=71, FETCH=72, FIRST=73, 
		ROWS=74, ONLY=75, STRING=76, NUMBER=77, STAR=78, COMMA=79, SEMI=80, DOT=81, 
		LPAREN=82, RPAREN=83, EQ=84, NEQ=85, LT=86, LTE=87, GT=88, GTE=89, LINE_COMMENT=90, 
		BLOCK_COMMENT=91, WS=92;
	public static final int
		RULE_sql_stmt = 0, RULE_select_stmt = 1, RULE_function_stmt = 2, RULE_data_type = 3, 
		RULE_function_params = 4, RULE_func_body = 5, RULE_limit_offset_clause = 6, 
		RULE_with_clause = 7, RULE_cte = 8, RULE_result_column = 9, RULE_join_clause = 10, 
		RULE_standard_join = 11, RULE_natural_join = 12, RULE_join_type = 13, 
		RULE_natural_join_type = 14, RULE_table_reference = 15, RULE_table_name = 16, 
		RULE_alias = 17, RULE_group_by_clause = 18, RULE_group_by_item = 19, RULE_order_by_clause = 20, 
		RULE_order_by_item = 21, RULE_agg_func = 22, RULE_expr = 23, RULE_case_expr = 24, 
		RULE_when_clause = 25, RULE_function_call = 26, RULE_function_arg = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"sql_stmt", "select_stmt", "function_stmt", "data_type", "function_params", 
			"func_body", "limit_offset_clause", "with_clause", "cte", "result_column", 
			"join_clause", "standard_join", "natural_join", "join_type", "natural_join_type", 
			"table_reference", "table_name", "alias", "group_by_clause", "group_by_item", 
			"order_by_clause", "order_by_item", "agg_func", "expr", "case_expr", 
			"when_clause", "function_call", "function_arg"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'VARCHAR'", "'INT'", "'NUMERIC'", "'TEXT'", "'DATE'", "'TIMESTAMP'", 
			"'BOOL'", "'SERIAL'", "'BIGSERIAL'", "'UUID'", "'JSON'", "'JSONB'", "'BYTEA'", 
			"'FLOAT'", "'REAL'", "'DOUBLE'", "'DECIMAL'", "'MONEY'", "'SMALLINT'", 
			"'BIGINT'", "'CHAR'", "'BIT'", "'INTERVAL'", "'SELECT'", "'WITH'", "'FROM'", 
			"'WHERE'", "'GROUP'", "'BY'", "'HAVING'", "'ORDER'", "'ASC'", "'DESC'", 
			"'AND'", "'OR'", "'NOT'", "'AS'", "'ON'", "'IS'", "'NULL'", "'LIKE'", 
			"'BETWEEN'", "'NATURAL'", "'CASE'", "'WHEN'", "'THEN'", "'ELSE'", "'END'", 
			"'CREATE'", "'FUNCTION'", "'RETURNS'", "'INNER'", "'LEFT'", "'RIGHT'", 
			"'FULL'", "'JOIN'", "'COUNT'", "'SUM'", "'AVG'", "'MIN'", "'MAX'", "'ARRAY_AGG'", 
			"'STRING_AGG'", "'BOOL_AND'", "'BOOL_OR'", "'VAR_POP'", "'VAR_SAMP'", 
			"'STDDEV_POP'", "'STDDEV_SAMP'", "'OFFSET'", "'FETCH'", "'FIRST'", "'ROWS'", 
			"'ONLY'", null, null, "'*'", "','", "';'", "'.'", "'('", "')'", "'='", 
			"'!='", "'<'", "'<='", "'>'", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ID", "VARCHAR", "INT", "NUMERIC", "TEXT", "DATE", "TIMESTAMP", 
			"BOOL", "SERIAL", "BIGSERIAL", "UUID", "JSON", "JSONB", "BYTEA", "FLOAT", 
			"REAL", "DOUBLE", "DECIMAL", "MONEY", "SMALLINT", "BIGINT", "CHAR", "BIT", 
			"INTERVAL", "SELECT", "WITH", "FROM", "WHERE", "GROUP", "BY", "HAVING", 
			"ORDER", "ASC", "DESC", "AND", "OR", "NOT", "AS", "ON", "IS", "NULL", 
			"LIKE", "BETWEEN", "NATURAL", "CASE", "WHEN", "THEN", "ELSE", "END", 
			"CREATE", "FUNCTION", "RETURNS", "INNER", "LEFT", "RIGHT", "FULL", "JOIN", 
			"COUNT", "SUM", "AVG", "MIN", "MAX", "ARRAY_AGG", "STRING_AGG", "BOOL_AND", 
			"BOOL_OR", "VAR_POP", "VAR_SAMP", "STDDEV_POP", "STDDEV_SAMP", "OFFSET", 
			"FETCH", "FIRST", "ROWS", "ONLY", "STRING", "NUMBER", "STAR", "COMMA", 
			"SEMI", "DOT", "LPAREN", "RPAREN", "EQ", "NEQ", "LT", "LTE", "GT", "GTE", 
			"LINE_COMMENT", "BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "postgreSqlGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public postgreSqlGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Sql_stmtContext extends ParserRuleContext {
		public Select_stmtContext select_stmt() {
			return getRuleContext(Select_stmtContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(postgreSqlGrammarParser.SEMI, 0); }
		public Function_stmtContext function_stmt() {
			return getRuleContext(Function_stmtContext.class,0);
		}
		public Sql_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_stmt; }
	}

	public final Sql_stmtContext sql_stmt() throws RecognitionException {
		Sql_stmtContext _localctx = new Sql_stmtContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sql_stmt);
		try {
			setState(62);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SELECT:
			case WITH:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				select_stmt();
				setState(57);
				match(SEMI);
				}
				break;
			case CREATE:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				function_stmt();
				setState(60);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Select_stmtContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(postgreSqlGrammarParser.SELECT, 0); }
		public TerminalNode FROM() { return getToken(postgreSqlGrammarParser.FROM, 0); }
		public Table_referenceContext table_reference() {
			return getRuleContext(Table_referenceContext.class,0);
		}
		public TerminalNode STAR() { return getToken(postgreSqlGrammarParser.STAR, 0); }
		public TerminalNode WITH() { return getToken(postgreSqlGrammarParser.WITH, 0); }
		public With_clauseContext with_clause() {
			return getRuleContext(With_clauseContext.class,0);
		}
		public List<Join_clauseContext> join_clause() {
			return getRuleContexts(Join_clauseContext.class);
		}
		public Join_clauseContext join_clause(int i) {
			return getRuleContext(Join_clauseContext.class,i);
		}
		public TerminalNode WHERE() { return getToken(postgreSqlGrammarParser.WHERE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Group_by_clauseContext group_by_clause() {
			return getRuleContext(Group_by_clauseContext.class,0);
		}
		public Order_by_clauseContext order_by_clause() {
			return getRuleContext(Order_by_clauseContext.class,0);
		}
		public List<Result_columnContext> result_column() {
			return getRuleContexts(Result_columnContext.class);
		}
		public Result_columnContext result_column(int i) {
			return getRuleContext(Result_columnContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(postgreSqlGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(postgreSqlGrammarParser.COMMA, i);
		}
		public Select_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_stmt; }
	}

	public final Select_stmtContext select_stmt() throws RecognitionException {
		Select_stmtContext _localctx = new Select_stmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_select_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WITH) {
				{
				setState(64);
				match(WITH);
				setState(65);
				with_clause();
				}
			}

			setState(68);
			match(SELECT);
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(69);
				match(STAR);
				}
				break;
			case 2:
				{
				{
				setState(70);
				result_column();
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(71);
					match(COMMA);
					setState(72);
					result_column();
					}
					}
					setState(77);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			}
			setState(80);
			match(FROM);
			setState(81);
			table_reference();
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 279240769083015168L) != 0)) {
				{
				{
				setState(82);
				join_clause();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(88);
				match(WHERE);
				setState(89);
				expr(0);
				}
			}

			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GROUP) {
				{
				setState(92);
				group_by_clause();
				}
			}

			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ORDER) {
				{
				setState(95);
				order_by_clause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_stmtContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(postgreSqlGrammarParser.CREATE, 0); }
		public TerminalNode FUNCTION() { return getToken(postgreSqlGrammarParser.FUNCTION, 0); }
		public List<TerminalNode> ID() { return getTokens(postgreSqlGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(postgreSqlGrammarParser.ID, i);
		}
		public TerminalNode LPAREN() { return getToken(postgreSqlGrammarParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(postgreSqlGrammarParser.RPAREN, 0); }
		public TerminalNode RETURNS() { return getToken(postgreSqlGrammarParser.RETURNS, 0); }
		public TerminalNode AS() { return getToken(postgreSqlGrammarParser.AS, 0); }
		public Func_bodyContext func_body() {
			return getRuleContext(Func_bodyContext.class,0);
		}
		public Function_paramsContext function_params() {
			return getRuleContext(Function_paramsContext.class,0);
		}
		public Function_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_stmt; }
	}

	public final Function_stmtContext function_stmt() throws RecognitionException {
		Function_stmtContext _localctx = new Function_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(CREATE);
			setState(99);
			match(FUNCTION);
			setState(100);
			match(ID);
			setState(101);
			match(LPAREN);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(102);
				function_params();
				}
			}

			setState(105);
			match(RPAREN);
			setState(106);
			match(RETURNS);
			setState(107);
			match(ID);
			setState(108);
			match(AS);
			setState(109);
			func_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Data_typeContext extends ParserRuleContext {
		public TerminalNode VARCHAR() { return getToken(postgreSqlGrammarParser.VARCHAR, 0); }
		public TerminalNode LPAREN() { return getToken(postgreSqlGrammarParser.LPAREN, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(postgreSqlGrammarParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(postgreSqlGrammarParser.NUMBER, i);
		}
		public TerminalNode RPAREN() { return getToken(postgreSqlGrammarParser.RPAREN, 0); }
		public TerminalNode INT() { return getToken(postgreSqlGrammarParser.INT, 0); }
		public TerminalNode NUMERIC() { return getToken(postgreSqlGrammarParser.NUMERIC, 0); }
		public TerminalNode COMMA() { return getToken(postgreSqlGrammarParser.COMMA, 0); }
		public TerminalNode TEXT() { return getToken(postgreSqlGrammarParser.TEXT, 0); }
		public TerminalNode DATE() { return getToken(postgreSqlGrammarParser.DATE, 0); }
		public TerminalNode TIMESTAMP() { return getToken(postgreSqlGrammarParser.TIMESTAMP, 0); }
		public TerminalNode BOOL() { return getToken(postgreSqlGrammarParser.BOOL, 0); }
		public TerminalNode SERIAL() { return getToken(postgreSqlGrammarParser.SERIAL, 0); }
		public TerminalNode BIGSERIAL() { return getToken(postgreSqlGrammarParser.BIGSERIAL, 0); }
		public TerminalNode UUID() { return getToken(postgreSqlGrammarParser.UUID, 0); }
		public TerminalNode JSON() { return getToken(postgreSqlGrammarParser.JSON, 0); }
		public TerminalNode JSONB() { return getToken(postgreSqlGrammarParser.JSONB, 0); }
		public TerminalNode BYTEA() { return getToken(postgreSqlGrammarParser.BYTEA, 0); }
		public TerminalNode FLOAT() { return getToken(postgreSqlGrammarParser.FLOAT, 0); }
		public TerminalNode REAL() { return getToken(postgreSqlGrammarParser.REAL, 0); }
		public TerminalNode DOUBLE() { return getToken(postgreSqlGrammarParser.DOUBLE, 0); }
		public TerminalNode DECIMAL() { return getToken(postgreSqlGrammarParser.DECIMAL, 0); }
		public TerminalNode MONEY() { return getToken(postgreSqlGrammarParser.MONEY, 0); }
		public TerminalNode SMALLINT() { return getToken(postgreSqlGrammarParser.SMALLINT, 0); }
		public TerminalNode BIGINT() { return getToken(postgreSqlGrammarParser.BIGINT, 0); }
		public TerminalNode CHAR() { return getToken(postgreSqlGrammarParser.CHAR, 0); }
		public TerminalNode BIT() { return getToken(postgreSqlGrammarParser.BIT, 0); }
		public TerminalNode INTERVAL() { return getToken(postgreSqlGrammarParser.INTERVAL, 0); }
		public Data_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data_type; }
	}

	public final Data_typeContext data_type() throws RecognitionException {
		Data_typeContext _localctx = new Data_typeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_data_type);
		try {
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VARCHAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				match(VARCHAR);
				setState(112);
				match(LPAREN);
				setState(113);
				match(NUMBER);
				setState(114);
				match(RPAREN);
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				match(INT);
				}
				break;
			case NUMERIC:
				enterOuterAlt(_localctx, 3);
				{
				setState(116);
				match(NUMERIC);
				setState(117);
				match(LPAREN);
				setState(118);
				match(NUMBER);
				setState(119);
				match(COMMA);
				setState(120);
				match(NUMBER);
				setState(121);
				match(RPAREN);
				}
				break;
			case TEXT:
				enterOuterAlt(_localctx, 4);
				{
				setState(122);
				match(TEXT);
				}
				break;
			case DATE:
				enterOuterAlt(_localctx, 5);
				{
				setState(123);
				match(DATE);
				}
				break;
			case TIMESTAMP:
				enterOuterAlt(_localctx, 6);
				{
				setState(124);
				match(TIMESTAMP);
				}
				break;
			case BOOL:
				enterOuterAlt(_localctx, 7);
				{
				setState(125);
				match(BOOL);
				}
				break;
			case SERIAL:
				enterOuterAlt(_localctx, 8);
				{
				setState(126);
				match(SERIAL);
				}
				break;
			case BIGSERIAL:
				enterOuterAlt(_localctx, 9);
				{
				setState(127);
				match(BIGSERIAL);
				}
				break;
			case UUID:
				enterOuterAlt(_localctx, 10);
				{
				setState(128);
				match(UUID);
				}
				break;
			case JSON:
				enterOuterAlt(_localctx, 11);
				{
				setState(129);
				match(JSON);
				}
				break;
			case JSONB:
				enterOuterAlt(_localctx, 12);
				{
				setState(130);
				match(JSONB);
				}
				break;
			case BYTEA:
				enterOuterAlt(_localctx, 13);
				{
				setState(131);
				match(BYTEA);
				}
				break;
			case FLOAT:
				enterOuterAlt(_localctx, 14);
				{
				setState(132);
				match(FLOAT);
				}
				break;
			case REAL:
				enterOuterAlt(_localctx, 15);
				{
				setState(133);
				match(REAL);
				}
				break;
			case DOUBLE:
				enterOuterAlt(_localctx, 16);
				{
				setState(134);
				match(DOUBLE);
				}
				break;
			case DECIMAL:
				enterOuterAlt(_localctx, 17);
				{
				setState(135);
				match(DECIMAL);
				setState(136);
				match(LPAREN);
				setState(137);
				match(NUMBER);
				setState(138);
				match(COMMA);
				setState(139);
				match(NUMBER);
				setState(140);
				match(RPAREN);
				}
				break;
			case MONEY:
				enterOuterAlt(_localctx, 18);
				{
				setState(141);
				match(MONEY);
				}
				break;
			case SMALLINT:
				enterOuterAlt(_localctx, 19);
				{
				setState(142);
				match(SMALLINT);
				}
				break;
			case BIGINT:
				enterOuterAlt(_localctx, 20);
				{
				setState(143);
				match(BIGINT);
				}
				break;
			case CHAR:
				enterOuterAlt(_localctx, 21);
				{
				setState(144);
				match(CHAR);
				setState(145);
				match(LPAREN);
				setState(146);
				match(NUMBER);
				setState(147);
				match(RPAREN);
				}
				break;
			case BIT:
				enterOuterAlt(_localctx, 22);
				{
				setState(148);
				match(BIT);
				setState(149);
				match(LPAREN);
				setState(150);
				match(NUMBER);
				setState(151);
				match(RPAREN);
				}
				break;
			case INTERVAL:
				enterOuterAlt(_localctx, 23);
				{
				setState(152);
				match(INTERVAL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_paramsContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(postgreSqlGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(postgreSqlGrammarParser.ID, i);
		}
		public List<Data_typeContext> data_type() {
			return getRuleContexts(Data_typeContext.class);
		}
		public Data_typeContext data_type(int i) {
			return getRuleContext(Data_typeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(postgreSqlGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(postgreSqlGrammarParser.COMMA, i);
		}
		public Function_paramsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_params; }
	}

	public final Function_paramsContext function_params() throws RecognitionException {
		Function_paramsContext _localctx = new Function_paramsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(ID);
			setState(156);
			data_type();
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(157);
				match(COMMA);
				setState(158);
				match(ID);
				setState(159);
				data_type();
				}
				}
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_bodyContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Func_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_body; }
	}

	public final Func_bodyContext func_body() throws RecognitionException {
		Func_bodyContext _localctx = new Func_bodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_func_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
